examples/04-network-policy/deny-all-egress.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny-all-egress
spec:
  podSelector: {} # select all pods in the namespace
  policyTypes: # Need this if you have egress rules
    - Egress
  egress: [] # Empty array = no rules; nothing is whitelisted
