examples/04-network-policy/deny-all-ingress.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny-all-ingress
spec:
  podSelector: {} # select all pods in the namespace
  ingress: [] # Empty array = no rules; nothing is whitelisted
