examples/04-network-policy/disallow-all-ingress.yaml
kind:     NetworkPolicy
apiVersion:  networking.k8s.io/v1
metadata:
  name: default-deny-all
spec:
  podSelector: {}
    # matchLabels: {}
  ingress: []
