examples/04-network-policy/frontend-egress-with-dns.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: frontend-with-dns
spec:
  podSelector:
    matchLabels:
      tier: frontend
  policyTypes:
    - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          tier: backend
    - namespaceSelector: {}
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - port: 53
      protocol: "UDP"
    # - port: 53
    #   protocol: "TCP"

# Will this policy actually allow frontend to egress to backend?
