examples/04-network-policy/monitoring.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: monitoring
spec:
  podSelector: {}
  ingress:
    - from:
      - podSelector:
          matchLabels:
            role: monitoring
        ports:
        - port: 5000
          protocol: TCP
