examples/04-network-policy/namespaces.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: prod-storage
  name: allow-prod-apps
spec:
  podSelector: {} # All pods in "prod-storage"
  ingress:
    - from:
      - namespaceSelector:
        matchLabels:
          purpose: prod # Can be accessed by pods in namespaces with label "purpose=prod"

---

apiVersion: v1
kind: Namespace
metadata:
  name: foo-prod
  labels:
    purpose: prod
    product: foo
